--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.12-SNAPSHOT'
+	id 'fabric-loom' version '0.12-SNAPSHOT' // FABRIC UPGRADE REFERENCE https://fabricmc.net/develop/
 	id 'maven-publish'
 }
 
