--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
+	# FABRIC UPGRADE REFERENCE https://fabricmc.net/develop/
 	minecraft_version=1.19
-	yarn_mappings=1.19+build.1
-	loader_version=0.14.6
+	yarn_mappings=1.19+build.4
+	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version = 1.19_2022-07-17r0
+	maven_group = io.sandbox
+	archives_base_name = sandbox-caravans
 
 # Dependencies
-	fabric_version=0.55.1+1.19
+	# FABRIC UPGRADE REFERENCE https://fabricmc.net/develop/
+	fabric_version=0.57.0+1.19
